modules/Calendar/Calendar.scss
$list-height: 66px;
$cal-head-color: #acaeb4;
$border: 1px solid #d5d6d9;
$background-color: #f7f7f7;
.cal {
    width: 617px;
    font-family: "Microsoft YaHei";
}
.cal-show {
    width: 196px;
    height: 32px;
    border-radius: 3px;
    border: $border;
    padding: 8px 0 8px 16px;
    box-sizing: border-box;
    font-size: 12px;
    position: relative;
    left: 421px;

    span {
        color: #333;
    }

    .cal-btn {
        height: 30px;
        width: 30px;
        float: right;
        position: relative;
        background-color: $background-color;
        top: -8px;
        border-left: $border;
    }
}
.cal-panel {
    width: 617px;
    height: 356px;
    background-color: $background-color;
    border: $border;
    padding: 10px;
    box-sizing: border-box;
    position: relative;
    top: -1px;
    display: none;
}
.cal-wrap {
    width: 291px;
    height: 264px;
    text-align: center;
    font-size: 12px;
    float: left;
    box-sizing: border-box;
    padding: 10px 20px;
    border: $border;
    background-color: #fff;

    &:first-child {
        margin-right: 13px;
    }
    .header {
        height: 18px;
    }
}
.cal-filter {
    margin-bottom: 10px;

    span {
        cursor: pointer;
        margin-left: 20px;
        font-size: 12px;
        color: #3389ff;
    }
}
.header {
    margin-bottom: 10px;

    @at-root {
        .header-year,
        .header-month {
            position: relative;
            display: inline-block;

            span {
                margin-right: 10px;
                font-weight: 700;
            }

            .header-year-list,
            .header-month-list {
                height: $list-height;
                overflow: scroll;
                position: absolute;
                display: none;
                background-color: #fff;
                width: 50px;
                z-index: 999;
                .header-year-list-item,
                .header-month-list-item {
                    cursor: pointer;
                    padding: 10px;
                }
            }

            .header-year-list {
                top: 20px;
                left: -5px;
            }

            .header-month-list {
                top: 20px;
                left: -17px;
            }
        }
    }

    .header-before {
        float: left;
    }
    .header-after {
        float: right;
    }
}

.cal-body {

    .weekday {
        height: 20px;
        color: $cal-head-color;
        background-color: $background-color;
        line-height: 20px;
        li {
            width: 35px;
            height: 20px;
            line-height: 20px;
            text-align: center;
            display: inline-block;
        }

    }
    .day {
        height: 100px;
        li {
            width: 35px;
            height: 35px;
            line-height: 35px;
            text-align: center;
            float: left;
            cursor: pointer;
        }
        .disable {
            color: #dddee0;
        }
        .on {
            color: #fff;
            z-index: 1;
            position: relative;
        }
        .on:after {
            background-color: #368bff;
            height: 22px;
            width: 22px;
            display: inline-block;
            content: '';
            position: absolute;
            top: 6px;
            left: 7px;
            z-index: -1;
            border-radius: 50%;
        }
        .dur {
            color: #368bff;
        }
    }
}
.cal-footer {
    a {
        color: #6d707b;
        border: $border;
        border-radius: 3px;
        height: 30px;
        width: 60px;
        box-sizing: border-box;
        display: inline-block;
        text-align: center;
        line-height: 30px;
        margin-top: 10px;
        font-size: 12px;

        &:first-child {
            margin-right: 10px;
        }

        &:hover {
            color: #368bff;
            border: 1px solid #368bff;
        }
    }

}

